v148
(xx/03/17)

Changes / Improvements / Optimizations:
DietPi-Config | WiFi: Country code is now also applied to cfg80211 module params (ieee80211_regdom=): https://github.com/Fourdee/DietPi/issues/838
DietPi-Config | Network NAS/Misc: Added option to delay boot, until a valid network connection is established: https://github.com/Fourdee/DietPi/issues/842
DietPi-Config | Audio > Sound Card: Added support for AudioPhonics I-Sabre-K2M (9018K2M): https://github.com/Fourdee/DietPi/issues/716
DietPi-Software | NTPD check/wait: Is now bypassed if no valid network connection is available. It will be checked again, before software installation: https://github.com/Fourdee/DietPi/issues/840
DietPi-Software | Tonido: Now available for installation. Lightweight alternative to NextCloud/Owncloud: http://dietpi.com/phpbb/viewtopic.php?f=8&t=5&p=6476#p6476
DietPi-Software | IceCast: Now available for installation. This is a Shoutcast streaming server, using DarkIce for audio input: http://dietpi.com/phpbb/viewtopic.php?f=8&t=5&p=6526#p6526
DietPi-Software | MotionEye: Now available for installation (RPi only). Web interface and surveillance for your RPi/USB camera. Mainly focused towards motion detection usage: http://dietpi.com/phpbb/viewtopic.php?f=8&t=5&start=100
DietPi-Software | CloudPrint (Google): Now available for installation. Print server with support for Google cloud printing. Many thanks to Sciamano for his assistance with testing: http://dietpi.com/phpbb/viewtopic.php?f=8&t=5&start=100#p6630
DietPi-Set_Hardware | RPi Camera: Now enables bcm2835-v4l2 by default. Required for /dev/video0 stream (mainly for motioneye).
General | Boot: All failed drive mounts will be re-mounted after network connection is established. This is mainly a failsafe for CIFS/net shares, to ensure they are mounted again after network established: https://github.com/Fourdee/DietPi/issues/842#issuecomment-289448261

Bug fixes: