@@ -104,7 +104,7 @@ rm -R /usr/share/icons/*
 
 
 #+armbian
-apt-get purge -y toilet toilet-fonts w-scan vlan weather-util* sysbench stress cmake cmake-data device-tree-co* fping hddtemp haveged hostapd i2c-tools iperf ir-keytable libasound2* libmtp* libusb-dev lirc lsof ncurses-term pkg-config unicode-data rfkill pv mtp-tools m4 screen alsa-utils autotools-dev bind9-host btrfs-tools bridge-utils cpufrequtils dvb-apps dtv-scan-table* evtest f3 figlet gcc gcc-4.8-* git git-man iozone3 ifenslave
+apt-get purge -y expect tcl-expect toilet toilet-fonts w-scan vlan weather-util* sysbench stress cmake cmake-data device-tree-co* fping hddtemp haveged hostapd i2c-tools iperf ir-keytable libasound2* libmtp* libusb-dev lirc lsof ncurses-term pkg-config unicode-data rfkill pv mtp-tools m4 screen alsa-utils autotools-dev bind9-host btrfs-tools bridge-utils cpufrequtils dvb-apps dtv-scan-table* evtest f3 figlet gcc gcc-4.8-* git git-man iozone3 ifenslave
 #apt-get purge -y linux-jessie-root-*
 
 #+ dev packages
@@ -171,6 +171,9 @@ rm /etc/systemd/system/cpu_governor.service # Meveric
 #	Disable ARMbian's resize service (not automatically removed by ARMbian scripts...)
 systemctl disable resize2fs
 rm /etc/systemd/system/resize2fs.service
+
+#	ARMbian-config
+rm /etc/profile.d/check_first_login_reboot.sh
 
 #Set UID bit for sudo: https://github.com/Fourdee/DietPi/issues/794
 chmod 4755 /usr/bin/sudo
