@@ -6372,43 +6372,52 @@ _EOF_
 
 			Banner_Installing
 
-			#RPi v1 armv6, broken packages in multimedia repo. https://github.com/Fourdee/DietPi/issues/84#issuecomment-151201361
-			if (( $HW_MODEL < 2 )); then
+			#Jessie
+			if (( $DISTRO == 3 )); then
 
-				INSTALL_URL_ADDRESS='http://dietpi.com/downloads/binaries/all/ffmpeg_2.7.2-1_armhf-v6.deb'
-				wget "$INSTALL_URL_ADDRESS" -O package.deb
-				dpkg -i package.deb
-				rm package.deb
+				#	RPi v1 armv6, broken packages in multimedia repo. https://github.com/Fourdee/DietPi/issues/84#issuecomment-151201361
+				if (( $HW_MODEL < 2 )); then
 
-				INSTALL_URL_ADDRESS='http://dietpi.com/downloads/binaries/all/fdk-aac_0.1.4_armhf-v6.deb'
-				wget "$INSTALL_URL_ADDRESS" -O package.deb
-				dpkg -i package.deb
-				rm package.deb
+					INSTALL_URL_ADDRESS='http://dietpi.com/downloads/binaries/all/ffmpeg_2.7.2-1_armhf-v6.deb'
+					wget "$INSTALL_URL_ADDRESS" -O package.deb
+					dpkg -i package.deb
+					rm package.deb
 
-				#Install pre-reqs
-				AGI libogg0 libvorbisenc2 libtheora0 libspeex1 libopencore-amrwb0 libopencore-amrnb0 libass5 libmp3lame0
+					INSTALL_URL_ADDRESS='http://dietpi.com/downloads/binaries/all/fdk-aac_0.1.4_armhf-v6.deb'
+					wget "$INSTALL_URL_ADDRESS" -O package.deb
+					dpkg -i package.deb
+					rm package.deb
 
-			#rpi 2/3
-			elif (( $HW_MODEL == 2 )) || (( $HW_MODEL == 3 )); then
+					#Install pre-reqs
+					AGI libogg0 libvorbisenc2 libtheora0 libspeex1 libopencore-amrwb0 libopencore-amrnb0 libass5 libmp3lame0
 
-				#Add Deb Multimedia repo for ffmpeg
-				if [ ! -f /etc/apt/sources.list.d/debmultimedia.list ]; then
+				#	rpi 2/3
+				elif (( $HW_MODEL == 2 )) || (( $HW_MODEL == 3 )); then
 
-					echo -e "deb http://www.deb-multimedia.org jessie main non-free" > /etc/apt/sources.list.d/debmultimedia.list
-					apt-get update
-					AGI deb-multimedia-keyring
-					apt-get update
+					#Add Deb Multimedia repo for ffmpeg
+					if [ ! -f /etc/apt/sources.list.d/debmultimedia.list ]; then
+
+						echo -e "deb http://www.deb-multimedia.org jessie main non-free" > /etc/apt/sources.list.d/debmultimedia.list
+						apt-get update
+						AGI deb-multimedia-keyring
+						apt-get update
+
+						AGI ffmpeg
+
+						#Done. Remove deb http://www.deb-multimedia.org from apt sources
+						# - When installing Kodi, apt uses the packages from deb http://www.deb-multimedia.org, rather than Raspbian.
+						rm /etc/apt/sources.list.d/debmultimedia.list
+						apt-get update
+
+					fi
+
+				#	available from backports
+				else
 
 					AGI ffmpeg
 
-					#Done. Remove deb http://www.deb-multimedia.org from apt sources
-					# - When installing Kodi, apt uses the packages from deb http://www.deb-multimedia.org, rather than Raspbian.
-					rm /etc/apt/sources.list.d/debmultimedia.list
-					apt-get update
-
 				fi
 
-			#Jessie (now available from backports).
 			else
 
 				AGI ffmpeg
