@@ -42,7 +42,7 @@
 			if [ -f "$FP_EXIT_CODE" ]; then
 
 				EXIT_CODE=$(cat "$FP_EXIT_CODE")
-				/DietPi/dietpi/func/dietpi-notify -1 $EXIT_CODE 'NTPD: time sync,'
+				/DietPi/dietpi/func/dietpi-notify -1 $EXIT_CODE 'NTPD: time sync |'
 				break
 
 			else
