@@ -1,5 +1,5 @@
 v148
-(xx/03/17)
+(08/04/17)
 
 Changes / Improvements / Optimizations:
 DietPi-Config | WiFi: Country code is now also applied to cfg80211 module params (ieee80211_regdom=): https://github.com/Fourdee/DietPi/issues/838
@@ -20,6 +20,9 @@ DietPi-Software | OMV: Has been disabled. We have recieved too many reports from
 DietPi-RAMlog | PiHole: Resolved an issue where PiHole logs were being cleared every 1 hour, if default locale on system is not en_GB. PiHole logs allow for current day and 5MB size limit. Many thanks to @k-plan for his assistance with this one: https://github.com/Fourdee/DietPi/issues/839
 General | Cron-Daily: Removed a df export left over from auto TRIM code (no longer used).
 General | RoseapplePi CPU temp: Now functional. Many thanks to @joaofl for this fix: https://github.com/Fourdee/DietPi/issues/848
+
+RPi Stretch:
+DietPi-Software | FFmpeg now sucessfully installs: https://github.com/Fourdee/DietPi/issues/475
 
 -----------------------------------------------------------------------------------------------------------
 
